--- a/CV.css
+++ b/CV.css
@@ -6,12 +6,20 @@ html {
     box-sizing: inherit;
 }
 
+li {
+    margin: 10px 0;
+}
+
+b {
+    font-size: 20px;
+}
+
 body {
     margin: 0px;
     width: 100%;
     height: 100%;
     display: grid;
-    grid: 200px auto / 400px auto 1fr 400px;
+    grid: 200px auto / 400px 500px 2fr 400px;
 }
 
 header {
@@ -32,22 +40,76 @@ header > img {
     border-radius: 50%;
 }
 
+/*左边栏*/
 .left {
-    margin-left: 50px;
+    margin: 30px 50px 0 50px; 
     grid-area: 2/2/3/3;
     display: grid;
-    grid: auto 1fr / 800px;
+    grid: auto 1fr / 1fr;
 }
 
-.basic {
-    grid-area: 1/1/2/2;
-}
+    .basic {
+        grid-area: 1/1/2/2;
+    }
+        .basic > ul {
+            display: block;
+            padding-left: 0px;
+            margin-left: 120px;
+        }
+    .skills {
+        grid-area: 2/1/3/2;
+    }
+        .skills > ul {
+            display: block;
+            padding-left: 0px;
+            margin-left: 120px;
+        }
 
-.skills {
-    grid-area: 2/1/3/2;
-}
-
+/*右边栏*/
 .right {
-    margin-right: 50px;
+    margin: 30px 50px 0 50px; 
     grid-area: 2/3/3/4;
+    display: grid;
+    grid: auto auto auto / 1fr;
 }
+
+
+    .edu {
+        grid-area: 1/1/2/2;
+    }
+        .edu-1 {
+            display: flex;
+            justify-content: space-between;
+        } 
+        .edu > p {
+            margin-left: 150px;
+        }
+
+
+    .expr {
+        grid-area: 2/1/3/2;
+    }
+        .expr-1 {
+            display: flex;
+            justify-content: space-between;
+        } 
+        .expr > ul {
+            display: block;
+            padding-left: 0px;
+            margin-left: 170px;
+        }
+
+
+    .proj {
+        grid-area: 3/1/4/2;
+    }
+        .proj-1 {
+            display: flex;
+            justify-content: space-between;
+        }
+        .proj > ul {
+            display: block;
+            padding-left: 0px;
+            margin-left: 170px;
+        }
+
