--- a/CV.css
+++ b/CV.css
@@ -40,9 +40,13 @@ header > img {
     border-radius: 50%;
 }
 
+h2 {
+    margin: 0px;
+}
+
 /*左边栏*/
 .left {
-    margin: 30px 50px 0 50px; 
+    margin: 50px 50px 0 50px; 
     grid-area: 2/2/3/3;
     display: grid;
     grid: auto 1fr / 1fr;
@@ -50,24 +54,57 @@ header > img {
 
     .basic {
         grid-area: 1/1/2/2;
+        display: grid;
+        grid: 30px 1fr / 40px auto; 
+        align-items: center;
     }
+        .basic .icon-ava {
+            background: #05c0d1;
+        }   
+        .basic > span {
+            grid-area: 1/1/2/2;
+        }
+        .basic > h2 {
+            grid-area: 1/2/2/3;
+        }
         .basic > ul {
+            grid-area: 2/2/3/3;
             display: block;
             padding-left: 0px;
-            margin-left: 120px;
         }
+            .basic li {
+                list-style: none;
+            }
+            .basic li::before {
+                margin-right: 10px;
+            }
+                
     .skills {
         grid-area: 2/1/3/2;
+        display: grid;
+        grid: 30px 340px / 40px auto; 
+        align-items: center;
     }
-        .skills > ul {
-            display: block;
-            padding-left: 0px;
-            margin-left: 120px;
+        .skills > span {
+            grid-area: 1/1/2/2;
         }
+        .skills .icon-tool {
+            background: #05c0d1;
+        }   
+        .skills > h2 {
+            grid-area: 1/2/2/3;
+        }
+        .skills > ul {
+            grid-area: 2/2/3/3;
+            display: block;
+            margin-left: 20px;
+            padding-left: 0px;
+        }
+
 
 /*右边栏*/
 .right {
-    margin: 30px 50px 0 50px; 
+    margin: 50px 50px 0 50px; 
     grid-area: 2/3/3/4;
     display: grid;
     grid: auto auto auto / 1fr;
