--- a/CV.css
+++ b/CV.css
@@ -19,7 +19,7 @@ body {
     width: 100%;
     height: 100%;
     display: grid;
-    grid: 200px auto / 400px 500px 2fr 400px;
+    grid: 200px auto / 1.5fr 2.5fr 5fr 1.5fr;
 }
 
 header {
@@ -42,6 +42,16 @@ header > img {
 
 h2 {
     margin: 0px;
+    display: flex;
+    align-items: center;
+}
+
+h2::after {
+    content: '';
+    border: 2px solid #0ff;
+    flex-grow: 1;
+    margin-left: 40px;
+    padding: 0px;
 }
 
 /*左边栏*/
@@ -55,21 +65,24 @@ h2 {
     .basic {
         grid-area: 1/1/2/2;
         display: grid;
-        grid: 30px 1fr / 40px auto; 
+        grid: 40px auto / 60px auto; 
         align-items: center;
-    }
-        .basic .icon-ava {
-            background: #05c0d1;
-        }   
+    } 
         .basic > span {
             grid-area: 1/1/2/2;
+            background: #0ff;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            display: grid;
+            align-items: center;
+            justify-content: center;
         }
         .basic > h2 {
             grid-area: 1/2/2/3;
         }
         .basic > ul {
             grid-area: 2/2/3/3;
-            display: block;
             padding-left: 0px;
         }
             .basic li {
@@ -82,16 +95,19 @@ h2 {
     .skills {
         grid-area: 2/1/3/2;
         display: grid;
-        grid: 30px 340px / 40px auto; 
-        align-items: center;
+        grid: 40px auto / 60px auto; 
     }
         .skills > span {
             grid-area: 1/1/2/2;
-        }
-        .skills .icon-tool {
-            background: #05c0d1;
+            background: #0ff;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            display: grid;
+            align-items: center;
+            justify-content: center;
         }   
-        .skills > h2 {
+        .skill > h2 {
             grid-area: 1/2/2/3;
         }
         .skills > ul {
@@ -109,44 +125,78 @@ h2 {
     display: grid;
     grid: auto auto auto / 1fr;
 }
-
-
     .edu {
         grid-area: 1/1/2/2;
+        display: grid;
+        grid: 40px 40px 1fr / 60px auto;
+        margin-bottom: 40px;
     }
-        .edu-1 {
-            display: flex;
-            justify-content: space-between;
-        } 
-        .edu > p {
-            margin-left: 150px;
-        }
-
-
+    .edu > span {
+        grid-area: 1/1/2/2;
+        background: #0ff;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        display: grid;
+        align-items: center;
+        justify-content: center;
+    }
+    .edu >h2 {
+        grid-area: 1/2/2/3;
+    }
+    .intro {
+        grid-area: 2/2/3/3;
+        display: flex;
+        justify-content: space-between;
+    }
+    .edu > ul {
+        grid-area: 3/2/4/3;
+        margin-left: 20px;
+        padding: 0px;
+    }
     .expr {
         grid-area: 2/1/3/2;
+        display: grid;
+        grid: 40px auto auto / 60px auto;
     }
-        .expr-1 {
-            display: flex;
-            justify-content: space-between;
-        } 
-        .expr > ul {
-            display: block;
-            padding-left: 0px;
-            margin-left: 170px;
+        .expr > span {
+            grid-area: 1/1/2/2;
+            background: #0ff;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            display: grid;
+            align-items: center;
+            justify-content: center;
         }
-
-
+        .expr > h2 {
+            grid-area: 1/2/2/3;
+        }
+        .expr > ul {
+            grid-area: 3/2/4/3;
+            margin-left: 20px;
+            padding: 0px;
+        }
     .proj {
         grid-area: 3/1/4/2;
+        display: grid;
+        grid: 40px auto auto / 60px auto;
     }
-        .proj-1 {
-            display: flex;
-            justify-content: space-between;
+        .proj > span {
+            grid-area: 1/1/2/2;
+            background: #0ff;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            display: grid;
+            align-items: center;
+            justify-content: center;
+        }
+        .proj > h2 {
+            grid-area: 1/2/2/3;
         }
         .proj > ul {
-            display: block;
-            padding-left: 0px;
-            margin-left: 170px;
+            grid-area: 3/2/4/3;
+            margin-left: 20px;
+            padding: 0px;
         }
-
