--- a/CV.css
+++ b/CV.css
@@ -48,9 +48,11 @@ h2 {
 
 h2::after {
     content: '';
-    border: 2px solid #0ff;
+    background: #0ff;
+    display: inline-block;
+    height: 4px;
     flex-grow: 1;
-    margin-left: 40px;
+    margin-left: 30px;
     padding: 0px;
 }
 
