--- a/CV.css
+++ b/CV.css
@@ -19,7 +19,12 @@ body {
     width: 100%;
     height: 100%;
     display: grid;
-    grid: 200px auto / 1.5fr 2.5fr 5fr 1.5fr;
+    grid: 200px auto / 1fr 3fr 5fr 1fr;
+}
+@media (max-width: 678px) {
+    body {
+        grid: 200px auto auto / auto;
+    }
 }
 
 header {
@@ -28,9 +33,10 @@ header {
     color: #fff;
     text-align: center;
 }
-
-header > h1, p {
-    margin: 14px;
+@media (max-width: 678px) {
+    header {
+        grid-area: 1/1/2/2;
+    }
 }
 
 header > img {
@@ -63,6 +69,12 @@ h2::after {
     display: grid;
     grid: auto 1fr / 1fr;
 }
+@media (max-width: 678px) {
+    .left {
+        margin: 20px 5px 40px 10px; 
+        grid-area: 2/1/3/2;
+    }
+}
 
     .basic {
         grid-area: 1/1/2/2;
@@ -71,6 +83,13 @@ h2::after {
         align-items: center;
         margin-bottom: 40px;
     } 
+    @media (max-width: 678px) {
+        .basic {
+            grid: 40px 140px / 45px auto;
+            margin: 0px;
+        }
+    }
+
         .basic > span {
             grid-area: 1/1/2/2;
             background: #0ff;
@@ -99,6 +118,13 @@ h2::after {
         grid-area: 2/1/3/2;
         display: grid;
         grid: 40px auto / 60px auto; 
+        margin-bottom: 40px;
+    }
+    @media (max-width: 678px) {
+        .skills {
+            grid: 40px 280px / 45px auto;
+            margin: 0px;
+        }
     }
         .skills > span {
             grid-area: 1/1/2/2;
@@ -123,17 +149,31 @@ h2::after {
 
 /*右边栏*/
 .right {
-    margin: 50px 50px 0 50px; 
+    margin: 50px 10px 0 50px; 
     grid-area: 2/3/3/4;
     display: grid;
     grid: auto auto auto / 1fr;
 }
+@media (max-width: 678px) {
+    .right {
+        margin: 20px 5px 0 10px; 
+        grid-area: 3/1/4/2;
+    }
+}
+
     .edu {
         grid-area: 1/1/2/2;
         display: grid;
-        grid: 40px 40px 1fr / 60px auto;
+        grid: 40px 40px 60px / 60px auto;
         margin-bottom: 40px;
     }
+    @media (max-width: 678px) {
+        .edu {
+            grid: 40px 40px 1fr / 45px auto;
+            margin: 0px;
+        }
+    }
+
     .edu > span {
         grid-area: 1/1/2/2;
         background: #0ff;
@@ -152,6 +192,14 @@ h2::after {
         display: flex;
         justify-content: space-between;
     }
+    @media (max-width: 678px) {
+        .intro {
+            grid-area: 2/2/3/3;
+            display: block;
+            justify-content: initial;
+        }
+    }
+
     .edu > ul {
         grid-area: 3/2/4/3;
         margin-left: 20px;
@@ -162,6 +210,12 @@ h2::after {
         display: grid;
         grid: 40px auto auto / 60px auto;
         margin-bottom: 40px;
+    }
+    @media (max-width: 678px) {
+        .expr {
+            grid: 40px 40px 1fr / 45px auto;
+            margin: 0px;
+        }
     }
         .expr > span {
             grid-area: 1/1/2/2;
@@ -186,6 +240,12 @@ h2::after {
         display: grid;
         grid: 40px auto auto / 60px auto;
         margin-bottom: 40px;
+    }
+    @media (max-width: 678px) {
+        .proj {
+            grid: 40px 40px 1fr / 45px auto;
+            margin: 0px;
+        }
     }
         .proj > span {
             grid-area: 1/1/2/2;
