--- a/CV.css
+++ b/CV.css
@@ -160,7 +160,12 @@ h2::after {
         grid-area: 3/1/4/2;
     }
 }
-
+@media (max-width: 360px) {
+    .right {
+        margin: 80px 5px 0 10px; 
+        grid-area: 3/1/4/2;
+    }
+}
     .edu {
         grid-area: 1/1/2/2;
         display: grid;
